--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -7,7 +7,10 @@
 .container > .row {
   width: 1000px;
   margin-left: calc(50% - 500px);
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
+  gap: 60px 0;
+  flex-wrap: wrap;
 }
 
 .container > .short-row {
@@ -16,12 +19,10 @@
 }
 .container > .row > .left {
   width: 50%;
-  float: left;
 }
 
 .container > .row > .right {
   width: 50%;
-  float: right;
 }
 
 @media (max-width: 1100px) {
@@ -43,6 +44,10 @@
     padding-left: 20px;
     padding-right: 20px;
   }
+  /* .container > .row {
+    flex-direction: column;
+  } */
+
   .container > .row,
   .container > .short-row {
     width: 100%;
@@ -50,7 +55,6 @@
   }
   .container > .row > .left {
     width: 100%;
-    margin-bottom: 60px;
   }
 
   .container > .row > .right {
