--- a/css/base/base.css
+++ b/css/base/base.css
@@ -1,3 +1,9 @@
+/* css variables */
+:root {
+  --main-color: #03a9f4;
+  --secondary-color: #ea1e63;
+}
+
 body body * {
   margin: 0;
   padding: 0;
@@ -10,5 +16,5 @@ body {
 }
 
 .bg-blue {
-  background-color: #36f;
+  background-color: var(--main-color);
 }
