--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -14,14 +14,15 @@
   width: 600px;
   margin-left: calc(50% - 300px);
 }
-.container > .row > .left {
+.container > .row > .column {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
   width: 50%;
-  float: left;
 }
 
 .container > .row > .right {
-  width: 50%;
-  float: right;
+  width: 40%;
 }
 
 @media (max-width: 1100px) {
@@ -48,12 +49,12 @@
     width: 100%;
     margin-left: 0;
   }
-  .container > .row > .left {
+  .container > .row > .column {
     width: 100%;
     margin-bottom: 60px;
   }
 
-  .container > .row > .right {
+  .container > .row > .column {
     width: 100%;
   }
 }
