--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -79,7 +79,7 @@ footer.container {
 
 .bottom > .trio {
   display: flex;
-  gap: 20px;
+  gap: 0 20px;
 }
 
 .bottom a {
@@ -89,5 +89,8 @@ footer.container {
 @media (max-width: 700px) {
   .main-title {
     font-size: 60px;
+  }
+  .bottom > .trio {
+    flex-direction: column;
   }
 }
