--- a/css/components/clock.css
+++ b/css/components/clock.css
@@ -1,19 +1,17 @@
 .clock {
   display: flex;
-  width: 100%;
   gap: 40px 0;
-  
-
+  flex-wrap: wrap;
+  width: 100%;
+  color: #fff;
 }
 .clock > .time {
   width: 25%;
 }
-
 .clock > .time > .value {
   font-size: 60px;
 }
-
-.time > .value > .label {
+.clock > .time > .label {
   text-transform: uppercase;
 }
 
@@ -23,8 +21,8 @@
   }
 }
 
-@media (max-width 400px) {
+@media (max-width: 400px) {
   .clock > .time {
-    width 100%
+    width: 100%;
   }
 }
