--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -81,20 +81,18 @@ footer.container {
   display: flex;
   gap: 0 20px;
 }
-
 .bottom > .trio > p {
   position: relative;
 }
-
 .bottom > .trio > p + p::before {
   content: "";
   display: inline-block;
   width: 2px;
   height: 16px;
-  background-color: #fff;
+  background-color: #fffc;
   position: absolute;
-  top: 1;
-  left: -11;
+  top: 1px;
+  left: -11px;
 }
 
 /* .bottom > .trio > p:last-child:after {
