--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,4 +1,4 @@
-.container > .hero {
+.container>.hero {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,11 +27,13 @@
 .section-description {
   font-size: 16px;
 }
-.section-description > a {
+
+.section-description>a {
   text-decoration: none;
   color: var(--secondary-color);
 }
-.section-description > a:hover {
+
+.section-description>a:hover {
   text-decoration: underline;
 }
 
@@ -42,14 +44,14 @@ footer.container {
 .row.socials {
   justify-content: center;
   font-size: 20px;
-  gap: 1em0.5em;
+  gap: 1em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   border-bottom: 1px solid #fff;
   margin-bottom: 2em;
 }
 
-.socials > a {
+.socials>a {
   width: 2.5em;
   height: 2.5em;
   line-height: 2.5em;
@@ -60,7 +62,7 @@ footer.container {
   transition: all 0.75s;
 }
 
-.socials > a:hover {
+.socials>a:hover {
   background-color: #fff;
   color: var(--main-color);
 }
@@ -73,18 +75,20 @@ footer.container {
   color: #fffc;
 }
 
-.bottom > .logo-white {
+.bottom>.logo-white {
   margin-bottom: 40px;
 }
 
-.bottom > .trio {
+.bottom>.trio {
   display: flex;
   gap: 0 20px;
 }
-.bottom > .trio > p {
+
+.bottom>.trio>p {
   position: relative;
 }
-.bottom > .trio > p + p::before {
+
+.bottom>.trio>p+p::before {
   content: "";
   display: inline-block;
   width: 2px;
@@ -107,7 +111,8 @@ content:'';
   .main-title {
     font-size: 60px;
   }
-  .bottom > .trio {
+
+  .bottom>.trio {
     flex-direction: column;
   }
 }
