Footer pseudo hidden on mobile

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -115,4 +115,9 @@ content:'';
   .bottom>.trio {
     flex-direction: column;
   }
+
+  .bottom>.trio>p+p::before {
+    display: inline-block;
+  }
+
 }
