--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -3,7 +3,17 @@
   padding: 60px 0;
 }
 
-.container>.row {
+.container.hero {
+  background-color: red;
+  background-image: url(../../pic/background.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  min-height: 100vh;
+  background-attachment: fixed;
+}
+
+.container.hero>.row {
   --w: 1000px;
   display: flex;
   justify-content: space-between;
