--- a/css/components/progress-bar.css
+++ b/css/components/progress-bar.css
@@ -9,25 +9,42 @@
   flex-direction: column;
   gap: 25px;
 }
-.progress-bar-list > .progress-bar {
+
+.progress-bar-list>.progress-bar {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-.progress-bar-list > .progress-bar > .top {
+
+.progress-bar-list>.progress-bar>.top {
   display: flex;
   justify-content: space-between;
 }
-.progress-bar-list .top > .label {
-}
-.progress-bar-list .top > .value {
-}
-.progress-bar-list > .progress-bar > .progress {
+
+.progress-bar-list .top>.label {}
+
+.progress-bar-list .top>.value {}
+
+.progress-bar-list>.progress-bar>.progress {
   height: 6px;
   background-color: #ccc;
 }
-.progress-bar-list .progress > .bar {
+
+.progress-bar-list .progress>.bar {
+  --w: 90% height: 100%;
+  width: var(--w);
   height: 100%;
-  width: 90%;
   background-color: var(--main-color);
+  animation-name: loading;
+  animation-duration: 2s;
+}
+
+@keyframes loading {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: var(--w);
+  }
 }
