--- a/css/components/clock.css
+++ b/css/components/clock.css
@@ -1,28 +1,32 @@
 .clock {
+  margin-top: 100px;
   display: flex;
   gap: 40px 0;
   flex-wrap: wrap;
   width: 100%;
   color: #fff;
 }
-.clock > .time {
+
+.clock>.time {
   width: 25%;
 }
-.clock > .time > .value {
+
+.clock>.time>.value {
   font-size: 60px;
 }
-.clock > .time > .label {
+
+.clock>.time>.label {
   text-transform: uppercase;
 }
 
 @media (max-width: 700px) {
-  .clock > .time {
+  .clock>.time {
     width: 50%;
   }
 }
 
 @media (max-width: 400px) {
-  .clock > .time {
+  .clock>.time {
     width: 100%;
   }
 }
